Fix .site-logo img size on IE8

--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -2336,11 +2336,14 @@ body {
   }
 }
 
+#masthead .site-logo img {
+  width: 50px;
+  height: 50px;
+}
+
 @media only screen and (min-width: 48em) {
   #masthead .site-logo img {
     display: inline;
-    width: 50px;
-    height: 50px;
     -webkit-border-radius: 100px;
        -moz-border-radius: 100px;
             border-radius: 100px;
